# Ominideck-Suit

./: .env.example  .gitignore  .replit  EMAIL_SHIPMENT_ACEITO  EMAIL_SHIPMENT_FROTA_INFORMADA  EMAIL_SHIPMENT_OFERTADO  PROJETO_MIGRACAO_CONTEUDO.md  README.md  REFACTORING_COMPLETO.md  RESUMO_AJUSTES.md  ROADMAP_CSS_GUIDE.md  build_release.sh  omni_launcher.py  omni_launcher.spec  pyproject.toml  replit.md  run.py  test_schema_driven.py  validate_ajuste_9_6.py
docs/: CHANGELOG_AJUSTES_9.6_9.7_9.8.md  FASE3_PROJECT_SELECTOR.md  FASES_1-3_SUMMARY.md  IMPLEMENTACAO_COMPLETA.txt  INDEX.md  OmniDeck_CSS_Referencia.html  README_APP.md  README_REFACTORING.md  TESTE_END-TO-END_FASE4.md  architecture.md  decisions.md  omni_deck_structure.md  otm_extraction_runbook.md  renderizacao_tabelas_pdf.md
docs/examples/: PROJETO_MIGRACAO_CONTEUDO.md
domain/projeto_migracao/: README.md  documento_migracao.json  projeto_migracao.json  projeto_migracao.json.backup  sample.json  schema.json
infra/: otm_query_executor.py  post_to_otm_rest.py  run_otm_query.py  update_otm_help_index.py  update_otm_object_cache.py  update_otm_tables.py  update_otm_translations_cache.py  validate_migration_project_eligible_tables.py
metadata/otm/: domain_table_statistics.json  migration_project_eligible_tables.json  table_descriptions_pt_br.json  tables_without_translation.md
metadata/ui/: groups.json
scripts/: build_agent_sql_catalog.py  build_help_consolidated.py  build_help_index.py  help_downloader.py  update_simulated_query_projeto.py
tools/: README.md  run_dev_server.py
ui/: __init__.py
(+13441 files in other folders)
