[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pdfplumber>=0.11.9",
    "requests>=2.32.5",
    "weasyprint>=68.1",
]
